# password-generator

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/generator/: mod.rs
