[package]
name = "pwdgen"
version = "1.0.2"
edition = "2021"
description = "Easy to remember and readable random passwords generator"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
log = "0.4"
rand = "0.8"

[dependencies.simple_logger]
version = "4"
default-features = false
features = ["colors"]

[[bin]]
path = "bin/pwdgen.rs"
name = "pwdgen"
